--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -20,7 +20,6 @@ html {
   box-sizing: inherit;
 }
 
-
 /* Variables (example: see declaration for "a" below) */
 
 :root {
@@ -29,7 +28,6 @@ html {
   --border-color: #cdcdcd;
   --gray-color: #666;
 }
-
 
 /* HTML element styles */
 
@@ -42,20 +40,19 @@ body {
 
 a {
   color: var(--link-color);
+  padding: 0px 5px 0px 5px;
 }
 
 /* ### TODO ### Styles for other HTML elements */
 
 /* ... your code here ... */
 
-
 /* Grid styles (no changes required) */
 
 .row {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex: 1;
+  display: grid;
+  ;
 }
 
 .col-1 {
@@ -109,29 +106,191 @@ a {
 
 /* ### TODO ### Styles for Header Component */
 
-/* ... your code here ... */
+.header{
+  background-color: #cdcdcd;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  height:150px;
+  padding: 0px 50px 0px 50px;
+  border-bottom: 2px solid;
+  margin-bottom: 40px;
+}
 
+.header__image{
+  width: 75px;
+  height: 75px;
+  margin-left: 1rem;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.header__title{
+  width: 33%;
+  display:flex;
+  justify-content: center;
+}
+
+.header__navigation{
+  width: 33%;
+  display:flex;
+  justify-content: right;
+}
+
+.header > img {
+  margin-right: 28%;
+}
 
 /* ### TODO ### Styles for Main Component */
 
-/* ... your code here ... */
+.main{
+  display: flex;
+  flex-wrap: wrap;
+  flex: auto;
+}
 
+.main h2{
+  margin-bottom: 2rem;
+}
 
 /* ### TODO ### Styles for Tagging component */
 
-/* ... your code here ... */
+.tagging{
+ flex-basis:auto;  
+ padding: 1rem;
+ position : sticky
+}
 
+#tag-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 300px;
+}
+
+#tag-form input{
+  display: grid;
+  height: 30px;
+  width: 300px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+}
+
+#tag-form button{
+  display: grid;
+  height: 30px;
+  width: 300px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  padding: 4px;
+}
+
+#tag-form label{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+#tag-form legend{
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+}
 
 /* ### TODO ### Styles for Discovery component */
 
-/* ... your code here ... */
+.discovery{
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 calc (100%-300px);
+}
 
+.discovery__search{
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 2rem;
+  display: flex;
+}
+
+.discovery__wrapper{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.discovery__search input{
+  display: grid;
+  height: 30px;
+  width: 150px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+}
+
+.discovery__search button{
+  display: grid;
+  height: 30px;
+  width: 150px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem; 
+  display:inline-block;
+}
+
+.discovery__search label{
+  height: 30px;
+  width: 150px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
+
+.discovery__results{
+  list-style-type: none;
+  margin-top: 2rem;
+}
+
+.discovery__results li{
+background-color: #efefef;
+padding: 1rem;
+margin-bottom: 1rem;
+color: #00B7FF;
+margin-left: 2rem;
+}
+
+.discovery__map{
+  margin-top: 2rem;
+  margin-left: 2rem;
+  display: grid;
+}
+
+.discovery__search legend{
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+}
+
+.discovery__title{
+  margin-left: 2rem;
+}
 
 /* ### TODO ### Styles for Footer Component */
 
-/* ... your code here ... */
-
+.footer{
+  background-color: #cdcdcd;
+  padding:2rem;
+}
 
 /* ### TODO ### Media Queries */
 
-/* ... your code here ... */
+@media screen and (max-width:850px){
+.row{
+  flex-direction: column;
+}  
+
+.tagging,.discovery{
+  flex: 1 1 100%;
+}
+
+} 
